--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -313,6 +313,13 @@
               box-shadow: 0 0 80px rgb(0 0 0 / 40%); border-radius: 24px; overflow: hidden;">
                 <div class="row">
                   <div class="col col-1">
+                    <ul class="brand align-items-center justify-content-between">
+                      <li class="brand-logos">
+                          <a class="icon" href="https://cannaco-labs.github.io/Cannaco/index.html" style="cursor: pointer">
+                            <svg style="max-width: 40%; margin: 0 auto; width: 100%; max-height: 120px;" class="logo logo-light"></svg>
+                          </a>
+                      </li>
+                    </ul>
                     <img src="assets/sock-drop/cgth.png">
                   </div>
                 </div>
