--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -315,7 +315,7 @@
                   <div class="col col-1">
                     <ul class="brand align-items-center justify-content-between">
                       <li class="brand-logos">
-                          <a class="icon" href="https://cannaco-labs.github.io/Cannaco/index.html" style="cursor: pointer">
+                          <a class="icon" style="cursor: default">
                             <svg style="max-width: 40%; margin: 0 auto; width: 100%; max-height: 120px;" class="logo logo-light"></svg>
                           </a>
                       </li>
