--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -137,7 +137,7 @@
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Use finger on mobile.</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Collect the socks.</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Avoid the pot leaves.</h1>
-                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Top 10 Scores Win prizes!</h1>
+                  <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Top 3 scores win prizes!</h1>
                   <!-- <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• CANNAMI CODE: A←→↑↓↑↓←→B</h1>
                   <h1 class="subtitle" style="color:#145a3c; margin-top: 16px;">• Catch the Golden Nugg!</h1> -->
                 </blockquote>
@@ -184,7 +184,7 @@
               <div class="tab-content" id="pills_tabFullContent">
                 <div class="tab-pane show active" id="pills_full_one" role="tabpanel" aria-labelledby="pills-full-one-tab">
                   <div class="container">
-                    <p class="body sub-section-heading" style="margin-bottom: 0px; color: #ffd200;">Top 10 Players WIN PRIZES</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 0px; color: #ffd200;">Top 3 Scores Win PrizesS</p>
                     <p class="body sub-section-heading" style="margin-top: 8px; margin-bottom: 24px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
                     <table class="table">
                       <thead>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="tab-pane" id="pills_full_two" role="tabpanel" aria-labelledby="pills-full-two-tab">
                   <div class="container">
-                    <p class="body sub-section-heading" style="margin-bottom: 0px; color: #ffd200;">Top Score Wins FREE Pickle Pipe</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 0px; color: #ffd200;">Top Score Wins Pickle Pipe</p>
                     <p class="body sub-section-heading" style="margin-top: 8px; margin-bottom: 24px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
                     <table class="table">
                       <thead>
@@ -493,7 +493,6 @@
           </div> 
         </div> 
       </section> -->
-
 
       <div id="sock1" class="sock" data-bullseye='1'>
         <img src="assets/sock-drop/cannaco-socks.svg">
