--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -316,10 +316,12 @@
                     <ul class="brand align-items-center justify-content-between">
                       <li class="brand-logos">
                         <a class="icon" style="cursor: default">
-                          <svg style="max-width: 40%; margin: 0 auto; width: 100%; max-height: 120px;" class="logo logo-light"></svg>
+                          <svg style="max-width: 40%; margin: 0 auto; width: 100%; max-height: 80px;" class="logo logo-light"></svg>
                         </a>
                       </li>
                     </ul>
+                  </div>
+                  <div class="col col-1">
                     <img src="assets/sock-drop/cgth.png">
                   </div>
                 </div>
