--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -184,7 +184,7 @@
               <div class="tab-content" id="pills_tabFullContent">
                 <div class="tab-pane show active" id="pills_full_one" role="tabpanel" aria-labelledby="pills-full-one-tab">
                   <div class="container">
-                    <p class="body sub-section-heading" style="margin-bottom: 0px; color: #ffd200;">Top 3 Scores Win PrizesS</p>
+                    <p class="body sub-section-heading" style="margin-bottom: 0px; color: #ffd200;">Top 3 Scores Win Prizes</p>
                     <p class="body sub-section-heading" style="margin-top: 8px; margin-bottom: 24px; color: #fff; font-weight: 400;">Scores update every 24 hours</p>
                     <table class="table">
                       <thead>
@@ -312,7 +312,7 @@
               -moz-box-shadow: 0 0 80px rgba(0, 0, 0, 0.4);
               box-shadow: 0 0 80px rgb(0 0 0 / 40%); border-radius: 24px; overflow: hidden;">
                 <div class="row">
-                  <div class="col col-1">
+                  <!-- <div class="col col-1">
                     <ul class="brand align-items-center justify-content-between">
                       <li class="brand-logos">
                         <a class="icon" style="cursor: default">
@@ -320,7 +320,7 @@
                         </a>
                       </li>
                     </ul>
-                  </div>
+                  </div> -->
                   <div class="col col-1">
                     <img src="assets/sock-drop/cgth.png">
                   </div>
@@ -367,8 +367,8 @@
                       <div class="invalid-feedback">Add Email Address.</div>
                     </div>
                     <div id="cid_2" class="form-input-wide" data-layout="full" style="background: #ffd200; border-radius: 6px!important; overflow: hidden; margin-top: 16px!important;">
-                        <button id="input_2" type="submit" class="btn btn-secondary btn-block jsTest-submitField" data-component="button" data-content="" style="color: black!important; border-radius: 6px!important; line-height: 12px!important;">Submit</button>
-                    </div> 
+                      <button id="input_2" type="submit" class="btn btn-secondary btn-block jsTest-submitField" data-component="button" data-content="" style="color: black!important; border-radius: 6px!important; line-height: 12px!important;">Submit</button>
+                    </div>
                     <style>
                       .form-readonly:hover {
                           outline: none;
@@ -386,9 +386,20 @@
                       }
                     </style>
                 </form>   
-                <blockquote style="padding: 16px 24px 24px 24px; width: 100%;">
+                <blockquote style="padding: 16px 24px 0px 24px; width: 100%;">
                   <button id="restart" class="btn btn-outline btn-block" style="border-radius: 6px!important;">Retry</button>
                 </blockquote>   
+                <div class="row">
+                  <div class="col col-1">
+                    <ul class="brand align-items-center justify-content-between">
+                      <li class="brand-logos">
+                        <a class="icon" style="cursor: default">
+                          <svg style="max-width: 40%; margin: 0 auto; width: 100%; opacity: 10%" class="logo logo-light"></svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
                      
 
           </div>
