--- a/index.html
+++ b/index.html
@@ -150,15 +150,15 @@
     <!-- <main style="display: flex; align-items: center; justify-content: center;"> -->
     <main>
 
-        <div id="intro" class="card" style="background: #FED202;" style="max-width: 560px; padding: 40px 24px;">
+        <div id="intro" class="card" style="background: #FED202;" style="max-width: 560px; padding: 0px 24px 40px 24px;">
           <div class="row">
             <div class="col col-1">
               <img src="assets/sock-drop/welcome-compact.png">
-              <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Help Canny Catch The Socks!</h1>
+              <!-- <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Help Canny Catch The Socks!</h1> -->
               <!-- <h1 class="title" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Win a pair of Cannaco Socks <br>Game available April 20!</h1> -->
             </div>
 
-            <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px; width: 100%;">
+            <blockquote class="blockquote" style="text-align: left; margin-bottom: 0px; width: 100%; padding: 16px 24px 0px 24px;">
                 <ul class="list-unstyled">
                     <li class="social-share instagram" style="margin-bottom: 16px;">
                         <a href="https://www.instagram.com/cannaco.world/" target="_blank" style="text-decoration: none;">
@@ -182,6 +182,10 @@
                         </a>
                     </li>
                 </ul>
+                <div class="col col-1" style="padding: 8px 24px 0px 24px;">
+                    <h1 class="subhead" style="color:#003214; text-align: center; width: 100%; margin: 0 auto;">Starts In</h1>
+                  </div>
+      
                 <!-- <a href="sock-drop-game.html" style="text-decoration: none;">
                     <button id="start" class="btn btn-tertiary btn-block" style="margin-top: 24px; border-radius: 8px;">PLAY NOW</button>
                 </a> -->
