--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -195,24 +195,24 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. --</th>
-                          <td>--</td>
+                          <th scope="row">1. Weedbesublime</th>
+                          <td>110</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. --</th>
-                          <td>--</td>
+                          <th scope="row">2. Marlowe</th>
+                          <td>59</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. --</th>
-                          <td>--</td>
+                          <th scope="row">3. Stacy</th>
+                          <td>52</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. --</th>
-                          <td>--</td>
+                          <th scope="row">4. Heather</th>
+                          <td>41</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. --</th>
-                          <td>--</td>
+                          <th scope="row">5. Brad</th>
+                          <td>19</td>
                         </tr>
                         <tr>
                           <th scope="row">6. --</th>
@@ -251,24 +251,24 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. --</th>
-                          <td>--</td>
+                          <th scope="row">1. Heather</th>
+                          <td>27</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. --</th>
-                          <td>--</td>
+                          <th scope="row">2. Stacy</th>
+                          <td>24</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. --</th>
-                          <td>--</td>
+                          <th scope="row">3. Marlowe</th>
+                          <td>22</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. --</th>
-                          <td>--</td>
+                          <th scope="row">4. Weedbesubmlime</th>
+                          <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. --</th>
-                          <td>--</td>
+                          <th scope="row">5. Brad</th>
+                          <td>4</td>
                         </tr>
                         <tr>
                           <th scope="row">6. --</th>
