--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -195,40 +195,40 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Weedbesublime</th>
+                          <th scope="row">1. Kota</th>
+                          <td>407</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. Weedbesublime</th>
                           <td>110</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Marlowe</th>
+                          <th scope="row">3. Marlowe</th>
                           <td>59</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Stacy</th>
+                          <th scope="row">4. Stacy</th>
                           <td>52</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Heather</th>
+                          <th scope="row">5. Matthew</th>
+                          <td>43</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">6. Heather</th>
                           <td>41</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Brad</th>
+                          <th scope="row">7. Osa</th>
+                          <td>22</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8. Brad</th>
                           <td>19</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. --</th>
-                          <td>--</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">7. --</th>
-                          <td>--</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8. --</th>
-                          <td>--</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. --</th>
-                          <td>--</td>
+                          <th scope="row">9. Joshua</th>
+                          <td>17</td>
                         </tr>
                         <tr>
                           <th scope="row">10. --</th>
@@ -251,40 +251,40 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <th scope="row">1. Heather</th>
+                          <th scope="row">1. Kota</th>
+                          <td>239</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2. Heather</th>
                           <td>27</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Stacy</th>
+                          <th scope="row">3. Stacy</th>
                           <td>24</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Marlowe</th>
+                          <th scope="row">4. Marlowe</th>
                           <td>22</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Weedbesubmlime</th>
+                          <th scope="row">5. Matthew</th>
+                          <td>14</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">6. Weedbesubmlime</th>
                           <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Brad</th>
+                          <th scope="row">7. Brad</th>
                           <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. --</th>
-                          <td>--</td>
+                          <th scope="row">8. Joshua</th>
+                          <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. --</th>
-                          <td>--</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">8. --</th>
-                          <td>--</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">9. --</th>
-                          <td>--</td>
+                          <th scope="row">9. Osa</th>
+                          <td>4</td>
                         </tr>
                         <tr>
                           <th scope="row">10. --</th>
