--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -199,40 +199,40 @@
                           <td>407</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Weedbesublime</th>
+                          <th scope="row">2. Tapzilla</th>
+                          <td>212</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3. Weedbesublime</th>
                           <td>110</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Marlowe</th>
+                          <th scope="row">4. Marlowe</th>
                           <td>59</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Stacy</th>
+                          <th scope="row">5. Stacy</th>
                           <td>52</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Matthew</th>
+                          <th scope="row">6. Matthew</th>
                           <td>43</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Heather</th>
+                          <th scope="row">7. Heather</th>
                           <td>41</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Osa</th>
+                          <th scope="row">8. Osa</th>
                           <td>22</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Brad</th>
+                          <th scope="row">9. Brad</th>
                           <td>19</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Joshua</th>
+                          <th scope="row">10. Joshua</th>
                           <td>17</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. --</th>
-                          <td>--</td>
                         </tr>
                       </tbody>
                     </table>
@@ -255,40 +255,40 @@
                           <td>239</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Heather</th>
+                          <th scope="row">2. Tapzilla</th>
+                          <td>122</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3. Heather</th>
                           <td>27</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Stacy</th>
+                          <th scope="row">4. Stacy</th>
                           <td>24</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Marlowe</th>
+                          <th scope="row">5. Marlowe</th>
                           <td>22</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Matthew</th>
+                          <th scope="row">6. Matthew</th>
                           <td>14</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Weedbesubmlime</th>
+                          <th scope="row">7. Weedbesubmlime</th>
                           <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Brad</th>
+                          <th scope="row">8. Brad</th>
                           <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Joshua</th>
+                          <th scope="row">9. Joshua</th>
                           <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Osa</th>
+                          <th scope="row">10. Osa</th>
                           <td>4</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. --</th>
-                          <td>--</td>
                         </tr>
                       </tbody>
                     </table>
