--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -196,7 +196,7 @@
                       <tbody>
                         <tr>
                           <th scope="row">1. Kota</th>
-                          <td>407</td>
+                          <td>710</td>
                         </tr>
                         <tr>
                           <th scope="row">2. Tapzilla</th>
@@ -207,32 +207,32 @@
                           <td>110</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Marlowe</th>
+                          <th scope="row">4. JustinH</th>
+                          <td>78</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">5. Marlowe</th>
                           <td>59</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Stacy</th>
+                          <th scope="row">6. Stacy</th>
                           <td>52</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Matthew</th>
+                          <th scope="row">7. Matthew</th>
                           <td>43</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Heather</th>
+                          <th scope="row">8. Heather</th>
                           <td>41</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Osa</th>
+                          <th scope="row">9. Osa</th>
                           <td>22</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Brad</th>
+                          <th scope="row">10. Brad</th>
                           <td>19</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Joshua</th>
-                          <td>17</td>
                         </tr>
                       </tbody>
                     </table>
@@ -256,7 +256,7 @@
                         </tr>
                         <tr>
                           <th scope="row">2. Tapzilla</th>
-                          <td>122</td>
+                          <td>433</td>
                         </tr>
                         <tr>
                           <th scope="row">3. Heather</th>
@@ -275,19 +275,23 @@
                           <td>14</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Weedbesubmlime</th>
+                          <th scope="row">7. JustinH</th>
+                          <td>6</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8. Weedbesubmlime</th>
                           <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Brad</th>
+                          <th scope="row">9. Brad</th>
                           <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Joshua</th>
+                          <th scope="row">10. Joshua</th>
                           <td>4</td>
                         </tr>
                         <tr>
-                          <th scope="row">10. Osa</th>
+                          <th scope="row">11. Osa</th>
                           <td>4</td>
                         </tr>
                       </tbody>
