Scoreboard Update 4:10 – 11:40am

--- a/sock-drop-game.html
+++ b/sock-drop-game.html
@@ -208,7 +208,7 @@
                         </tr>
                         <tr>
                           <th scope="row">4. Brad</th>
-                          <td>88</td>
+                          <td>103</td>
                         </tr>
                         <tr>
                           <th scope="row">5. JustinH</th>
@@ -219,20 +219,20 @@
                           <td>77</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Marlowe</th>
+                          <th scope="row">7. Chrissy</th>
+                          <td>72</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">8. Marlowe</th>
                           <td>59</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. Stacy</th>
+                          <th scope="row">9. Stacy</th>
                           <td>52</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Matthew</th>
+                          <th scope="row">10. Matthew</th>
                           <td>43</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Heather</th>
-                          <td>41</td>
                         </tr>
                       </tbody>
                     </table>
@@ -255,44 +255,40 @@
                           <td>433</td>
                         </tr>
                         <tr>
-                          <th scope="row">2. Tapzilla</th>
+                          <th scope="row">2. Brad</th>
+                          <td>142</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3. Tapzilla</th>
                           <td>122</td>
                         </tr>
                         <tr>
-                          <th scope="row">3. Heather</th>
+                          <th scope="row">4. Heather</th>
                           <td>27</td>
                         </tr>
                         <tr>
-                          <th scope="row">4. Osa</th>
+                          <th scope="row">5. Osa</th>
                           <td>25</td>
                         </tr>
                         <tr>
-                          <th scope="row">5. Stacy</th>
+                          <th scope="row">6. Stacy</th>
                           <td>24</td>
                         </tr>
                         <tr>
-                          <th scope="row">6. Marlowe</th>
+                          <th scope="row">7. Marlowe</th>
                           <td>22</td>
                         </tr>
                         <tr>
-                          <th scope="row">7. Matthew</th>
+                          <th scope="row">8. Matthew</th>
                           <td>14</td>
                         </tr>
                         <tr>
-                          <th scope="row">8. JustinH</th>
+                          <th scope="row">9. JustinH</th>
                           <td>6</td>
                         </tr>
                         <tr>
-                          <th scope="row">9. Weedbesubmlime</th>
-                          <td>4</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">10. Brad</th>
-                          <td>4</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">11. Joshua</th>
-                          <td>4</td>
+                          <th scope="row">10. Chrissy</th>
+                          <td>6</td>
                         </tr>
                       </tbody>
                     </table>
